# trikhub

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.changeset/: brave-lights-hope.md  cli-parity.md  config-validation-warnings.md  config.json  cozy-dryers-wear.md  create-agent-command.md  early-ravens-give.md  easy-maps-smile.md  floppy-beers-stare.md  khaki-jars-greet.md  node22-sqlite-migration.md  python-pypi-publishing.md  python-v2-parity.md  true-moons-hide.md  warm-stars-end.md  yummy-brooms-melt.md
.claude/commands/: create-pr.md  finish-task.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  install-test.yml  release.yml
docker/: build-images.sh  register-hooks.mjs  resolve-trikhub.mjs  worker-node.Dockerfile  worker-python.Dockerfile
docs/plans/: 2026-02-22-content-hoarder-implementation.md  2026-02-22-content-hoarder-trik-design.md  mcp-server-implementation.md
example/: CHANGELOG.md  agent.ts  cli.ts  package.json  tsconfig.json
examples/js/local-playground/.trikhub/triks/@molefas/trik-article-search-py/: .gitignore  README.md  pyproject.toml  requirements.txt  trikhub.json
examples/js/local-playground/.trikhub/triks/@molefas/trik-article-search-py/trik_article_search_py/: __init__.py  data.py  graph.py  llm.py  manifest.json
python/: pyproject.toml
scripts/: sync-python-version.mjs  test-install.sh
tests/: linter.test.ts  manifest.test.ts  worker-protocol.test.ts
(+107 files in other folders)
